--- a/my-app/src/index.html
+++ b/my-app/src/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>LockBoxEncryption</title>
   <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 </head>
 <body class="mat-typography">
   <app-root></app-root>
